--- a/inject/vscode-frosted-glass-theme.css
+++ b/inject/vscode-frosted-glass-theme.css
@@ -1,6 +1,6 @@
 /* just define css variables */
 /* change those variables into whatever you like */
-.windows {
+body {
     --backdrop-filter: blur(8px) saturate(0.8);
     --background-color: rgba(255, 255, 255, 0.4);
     --transition: 300ms;
