恢复monaco-hover上的效果

--- a/inject/vscode-frosted-glass-theme.css
+++ b/inject/vscode-frosted-glass-theme.css
@@ -21,6 +21,11 @@ body {
 }
 
 /* Editor Panel */
+.monaco-hover {
+    backdrop-filter: var(--backdrop-filter);
+    background-color: var(--background-color) !important;
+}
+
 .suggest-details {
     backdrop-filter: var(--backdrop-filter);
     background-color: var(--background-color) !important;
