修复新版本vscode的monaco-scrollable-element不透明问题

--- a/inject/vscode-frosted-glass-theme.css
+++ b/inject/vscode-frosted-glass-theme.css
@@ -79,8 +79,8 @@ body {
     background-color: var(--background-color) !important;
 }
 
-.separator {
-    border-bottom-color: rgba(255, 255, 255, 0.4) !important;
+.monaco-scrollable-element {
+    background-color: transparent !important;
 }
 
 /* Search & Replace */
