--- a/inject/vscode-frosted-glass-theme.css
+++ b/inject/vscode-frosted-glass-theme.css
@@ -147,3 +147,9 @@ body {
     backdrop-filter: var(--backdrop-filter);
     background-color: var(--background-color) !important;
 }
+
+/* Debug Hover Widget */
+.debug-hover-widget {
+    backdrop-filter: var(--backdrop-filter);
+    background-color: var(--background-color) !important;
+}
