feat: add `simple-find-part` which is shown at extension page

--- a/inject/vscode-frosted-glass-theme.css
+++ b/inject/vscode-frosted-glass-theme.css
@@ -157,3 +157,8 @@
   backdrop-filter: var(--backdrop-filter);
   background-color: var(--vscode-menu-background) !important;
 }
+
+/* Find part */
+.monaco-workbench .simple-find-part {
+  backdrop-filter: var(--backdrop-filter);
+}
