feat: add `custom dialog`

--- a/inject/vscode-frosted-glass-theme.css
+++ b/inject/vscode-frosted-glass-theme.css
@@ -171,3 +171,8 @@
 .defineKeybindingWidget {
   backdrop-filter: var(--backdrop-filter);
 }
+
+/* Custom Dialog Box */
+.monaco-dialog-box {
+  backdrop-filter: var(--backdrop-filter);
+}
