--- a/inject/vscode-frosted-glass-theme.css
+++ b/inject/vscode-frosted-glass-theme.css
@@ -4,6 +4,7 @@
   --backdrop-filter: blur(30px);
   --background-color: ;
   --transition: 300ms;
+  --animation: 300ms cubic-bezier(0, 0.8, 0.2, 1) 0s 1 forwards dropdown;
 }
 
 /* Title Bar */
@@ -179,4 +180,26 @@
 /* Custom Dialog Box */
 .monaco-dialog-box {
   backdrop-filter: var(--backdrop-filter);
+}
+
+/* Menu Dropdown Animation */
+.monaco-menu-container {
+  overflow: hidden;
+}
+
+.monaco-menu-container > .monaco-scrollable-element {
+  animation: var(--animation);
+}
+
+.quick-input-widget {
+  animation: var(--animation);
+}
+
+@keyframes dropdown {
+  from {
+    transform: translateY(-100%);
+  }
+  to {
+    transform: translateY(0);
+  }
 }
