feat: add `monaco-editor-overlaymessage`

--- a/inject/vscode-frosted-glass-theme.css
+++ b/inject/vscode-frosted-glass-theme.css
@@ -178,6 +178,11 @@
   backdrop-filter: var(--backdrop-filter);
 }
 
+/* Overlay Message */
+.monaco-editor-overlaymessage > .message {
+  backdrop-filter: var(--backdrop-filter);
+}
+
 /* Custom Dialog Box */
 .monaco-dialog-box {
   backdrop-filter: var(--backdrop-filter);
