fix: avoid event being triggered in animation

--- a/inject/vscode-frosted-glass-theme.css
+++ b/inject/vscode-frosted-glass-theme.css
@@ -233,6 +233,10 @@
   from {
     transform: translateY(-100%);
   }
+  0%,
+  99% {
+    pointer-events: none;
+  }
   to {
     transform: translateY(0);
   }
