fix: rename css variables to avoid conflict

--- a/inject/vscode-frosted-glass-theme.css
+++ b/inject/vscode-frosted-glass-theme.css
@@ -1,46 +1,48 @@
 /* Just define css variables */
 /* Change these variables into whatever you like */
 :root {
-  --backdrop-filter: blur(30px);
-  --background-color: ;
-  --transition: 300ms;
-  --animation-menu: 300ms cubic-bezier(0, 0.8, 0.2, 1) 0s 1 forwards dropdown;
-  --animation-dialog: 300ms cubic-bezier(0, 0.8, 0.2, 1) 0s 1 forwards zoomIn;
+  --fgt-backdrop-filter: blur(30px);
+  --fgt-background-color: ;
+  --fgt-transition: 300ms;
+  --fgt-animation-menu: 300ms cubic-bezier(0, 0.8, 0.2, 1) 0s 1 forwards
+    fgtDropdown;
+  --fgt-animation-dialog: 300ms cubic-bezier(0, 0.8, 0.2, 1) 0s 1 forwards
+    fgtZoomIn;
 }
 
 /* Title Bar */
 .window-title {
-  transition: var(--transition);
+  transition: var(--fgt-transition);
 }
 
 .window-icon {
-  transition: var(--transition);
+  transition: var(--fgt-transition);
 }
 
 /* Action Label */
 .action-label.codicon {
-  transition: var(--transition);
+  transition: var(--fgt-transition);
 }
 
 /* Editor Panel */
 .monaco-hover {
-  backdrop-filter: var(--backdrop-filter);
+  backdrop-filter: var(--fgt-backdrop-filter);
   /* background-color: var(--background-color) !important; */
 }
 
 .monaco-editor .suggest-details {
-  backdrop-filter: var(--backdrop-filter);
+  backdrop-filter: var(--fgt-backdrop-filter);
   /* background-color: var(--background-color) !important; */
 }
 
 .monaco-editor .tree {
-  backdrop-filter: var(--backdrop-filter);
+  backdrop-filter: var(--fgt-backdrop-filter);
   /* background-color: var(--background-color) !important; */
 }
 
 /* Command Panel */
 .quick-input-widget {
-  backdrop-filter: var(--backdrop-filter);
+  backdrop-filter: var(--fgt-backdrop-filter);
   /* background-color: var(--background-color) !important; */
 }
 
@@ -67,7 +69,7 @@
 
 /* Menu */
 .monaco-menu .monaco-action-bar {
-  backdrop-filter: var(--backdrop-filter);
+  backdrop-filter: var(--fgt-backdrop-filter);
   /* background-color: var(--background-color) !important; */
 }
 
@@ -78,51 +80,51 @@
 
 /* Search & Replace */
 .editor-widget {
-  backdrop-filter: var(--backdrop-filter);
+  backdrop-filter: var(--fgt-backdrop-filter);
   background-color: var(--vscode-menu-background) !important;
 }
 
 /* Notification Panel */
 .notifications-center-header {
-  backdrop-filter: var(--backdrop-filter);
+  backdrop-filter: var(--fgt-backdrop-filter);
   background-color: var(--vscode-menu-background) !important;
 }
 
 .notifications-list-container {
-  backdrop-filter: var(--backdrop-filter);
+  backdrop-filter: var(--fgt-backdrop-filter);
   /* background-color: var(--background-color) !important; */
 }
 
 .notification-toast {
   background-color: transparent !important;
-  transition: var(--transition);
+  transition: var(--fgt-transition);
 }
 
 /* Feedback Form */
 .feedback-form {
-  backdrop-filter: var(--backdrop-filter);
+  backdrop-filter: var(--fgt-backdrop-filter);
   /* background-color: var(--background-color) !important; */
 }
 
 /* Minimap */
 .minimap {
-  backdrop-filter: var(--backdrop-filter);
+  backdrop-filter: var(--fgt-backdrop-filter);
   background-color: var(--vscode-menu-background);
 }
 
 .minimap canvas {
   opacity: 0.4;
-  transition: var(--transition);
+  transition: var(--fgt-transition);
 }
 
 .minimap:hover canvas {
   opacity: 1;
-  transition: var(--transition);
+  transition: var(--fgt-transition);
 }
 
 /* Scroll Bar */
 .slider {
-  backdrop-filter: var(--backdrop-filter);
+  backdrop-filter: var(--fgt-backdrop-filter);
 }
 
 .monaco-editor .scrollbar.vertical .slider {
@@ -131,36 +133,36 @@
 
 /* Setting Page */
 .setting-item-contents.settings-row-inner-container {
-  transition: var(--transition);
+  transition: var(--fgt-transition);
 }
 
 /* Breadcrumbs Picker */
 .monaco-breadcrumbs-picker > div:nth-child(2) {
-  backdrop-filter: var(--backdrop-filter);
+  backdrop-filter: var(--fgt-backdrop-filter);
   background-color: var(--vscode-menu-background) !important;
 }
 
 /* Debug Tool Bar */
 .debug-toolbar {
-  backdrop-filter: var(--backdrop-filter);
+  backdrop-filter: var(--fgt-backdrop-filter);
   background-color: var(--vscode-menu-background) !important;
 }
 
 /* Debug Hover Widget */
 .debug-hover-widget {
-  backdrop-filter: var(--backdrop-filter);
+  backdrop-filter: var(--fgt-backdrop-filter);
   background-color: var(--vscode-menu-background) !important;
 }
 
 /* Code Action Widget */
 .action-widget {
-  backdrop-filter: var(--backdrop-filter);
+  backdrop-filter: var(--fgt-backdrop-filter);
   background-color: var(--vscode-menu-background) !important;
 }
 
 /* Rename Box */
 .rename-box {
-  backdrop-filter: var(--backdrop-filter);
+  backdrop-filter: var(--fgt-backdrop-filter);
   background-color: var(--vscode-menu-background) !important;
 }
 
@@ -170,30 +172,30 @@
 
 /* Find Part */
 .monaco-workbench .simple-find-part {
-  backdrop-filter: var(--backdrop-filter);
+  backdrop-filter: var(--fgt-backdrop-filter);
 }
 
 /* Key Binding Widget */
 .defineKeybindingWidget {
-  backdrop-filter: var(--backdrop-filter);
+  backdrop-filter: var(--fgt-backdrop-filter);
 }
 
 /* Overlay Message */
 .monaco-editor-overlaymessage > .message {
-  backdrop-filter: var(--backdrop-filter);
+  backdrop-filter: var(--fgt-backdrop-filter);
 }
 
 /* Custom Dialog Box */
 .dialog-shadow {
-  backdrop-filter: var(--backdrop-filter);
-  animation: var(--animation-dialog);
+  backdrop-filter: var(--fgt-backdrop-filter);
+  animation: var(--fgt-animation-dialog);
 }
 
 .dimmed {
-  animation: 300ms linear 0s 1 forwards fadeIn;
+  animation: 300ms linear 0s 1 forwards fgtFadeIn;
 }
 
-@keyframes zoomIn {
+@keyframes fgtZoomIn {
   from {
     transform: perspective(100px) translateZ(-100px);
   }
@@ -202,7 +204,7 @@
   }
 }
 
-@keyframes fadeIn {
+@keyframes fgtFadeIn {
   from {
     background-color: transparent;
   }
@@ -214,28 +216,29 @@
 /* Menu Dropdown Animation */
 .monaco-menu-container {
   overflow: clip !important;
-  overflow-clip-margin: 10px;
+  overflow-clip-margin: 10px !important;
 }
 
 .monaco-menu-container > .monaco-scrollable-element {
-  animation: var(--animation-menu);
+  animation: var(--fgt-animation-menu);
+  transform: translateY(var(--transformY-state));
 }
 
 .quick-input-widget {
-  animation: var(--animation-menu);
+  animation: var(--fgt-animation-menu);
 }
 
 /* Breadcrumbs Picker Animation */
 .context-view {
   overflow: clip !important;
-  overflow-clip-margin: 10px;
+  overflow-clip-margin: 10px !important;
 }
 
 .monaco-breadcrumbs-picker {
-  animation: var(--animation-menu);
+  animation: var(--fgt-animation-menu);
 }
 
-@keyframes dropdown {
+@keyframes fgtDropdown {
   from {
     transform: translateY(-100%);
   }
