fix: `action-label` is selected when its no longer a shadow dom

--- a/inject/vscode-frosted-glass-theme.css
+++ b/inject/vscode-frosted-glass-theme.css
@@ -78,6 +78,10 @@
   pointer-events: none;
 }
 
+.monaco-menu-container > .monaco-scrollable-element .action-label {
+  --vscode-toolbar-activeBackground: transparent;
+}
+
 /* Search & Replace */
 .editor-widget {
   backdrop-filter: var(--fgt-backdrop-filter);
