fix: when .message is not a direct child

--- a/inject/vscode-frosted-glass-theme.css
+++ b/inject/vscode-frosted-glass-theme.css
@@ -185,7 +185,7 @@
 }
 
 /* Overlay Message */
-.monaco-editor-overlaymessage > .message {
+.monaco-editor-overlaymessage .message {
   backdrop-filter: var(--fgt-backdrop-filter);
 }
 
