fix: `dom.isAncestor` changes after vscode 1.84.0
https://github.com/microsoft/vscode/blob/3e452bfef11522d0151fd2e884bb8bf869d7d2fa/src/vs/base/browser/dom.ts#L632

--- a/inject/vscode-frosted-glass-theme.css
+++ b/inject/vscode-frosted-glass-theme.css
@@ -73,7 +73,7 @@
 }
 
 /* Menu */
-.monaco-menu-container > .monaco-scrollable-element {
+.monaco-menu-container .monaco-scrollable-element {
   backdrop-filter: var(--fgt-backdrop-filter);
   /* background-color: var(--background-color) !important; */
 }
@@ -224,7 +224,7 @@
   overflow-clip-margin: 10px !important;
 }
 
-.monaco-menu-container > .monaco-scrollable-element,
+.monaco-menu-container .monaco-scrollable-element,
 .action-widget,
 .monaco-breadcrumbs-picker {
   animation: var(--fgt-animation-menu);
