refactor: make it more clear

--- a/inject/vscode-frosted-glass-theme.css
+++ b/inject/vscode-frosted-glass-theme.css
@@ -208,10 +208,7 @@
 
 .monaco-menu-container .monaco-scrollable-element,
 .action-widget,
-.monaco-breadcrumbs-picker {
-  animation: var(--fgt-animation-menu);
-}
-
+.monaco-breadcrumbs-picker,
 .quick-input-widget {
   animation: var(--fgt-animation-menu);
 }
